--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VideogameShop</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
 </head>
@@ -12,10 +13,10 @@
     <header>
         <nav>
             <ul class="navigation">
-                <li><img class="logo" src="img/test.jpg" alt=""></li>
+                <li><img class="logo" src="img/logo2.png" alt=""></li>
                 <div>
-                    <li><a href="">Product 1</a></li>
-                    <li><a href="">Product 2</a></li>
+                    <li><a href="Producten Overzicht.html">Producten Overzicht 1</a></li>
+                    <li><a href="">Producten Overzicht 2</a></li>
                 </div>
             </ul>
         </nav>
@@ -24,64 +25,74 @@
 
         <section class="sections section1">
             <figure class="slogan">
-                <h2>VideogameShop</h2>
+                <h2>We Sell Games</h2>
                 <a class="button1" href="">click</a>
             </figure>
         </section>
 
         <section class="sections section2">
             <div class="top">
-                <img class="topImage" src="img/test.jpg" alt="">
+                <img class="topImage" src="img/Games/AcMirage.jpg" alt="">
                 <figure class="text">
-                    <h2>test</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque perferendis explicabo laudantium nihil iusto odit minima corporis ex sit, ea porro officiis unde assumenda a facere consequatur? Placeat, vel! Consectetur.</p>
+                    <h2>Check This Out!</h2>
+                    <p>
+                        Experience the story of Basim, a scheming petty thief with nightmarish visions, 
+                        who searches for answers and justice in the bustling streets of ninth-century Baghdad. Through a mysterious, 
+                        ancient organization called the Hidden Ones, he becomes a deadly Master Assassin and changes his destiny in a way he never imagined
+                    </p>
+                    <a class="button2" href="">click</a>
                 </figure>
             </div>
             <div class="bottom">
-                <img class="bottomImages" src="img/test.jpg" alt="">
-                <img class="bottomImages" src="img/test.jpg" alt="">
-                <img class="bottomImages" src="img/test.jpg" alt="">
-                <img class="bottomImages" src="img/test.jpg" alt="">
+                <img class="bottomImages" src="img/Games/DarkSouls.jpg" alt="">
+                <img class="bottomImages" src="img/Games/R6S.jpg" alt="">
+                <img class="bottomImages" src="img/Games/Skyrim.jpg" alt="">
+                <img class="bottomImages" src="img/Games/gta5.jpg" alt="">
             </div>
         </section>
 
         <section class="sections section3">
             <section class="block1">
-                <img src="img/test.jpg" alt="">
+                <img src="img/shopping-cart-round-1137-svgrepo-com.svg" alt="">
                 <figure>
-                    <h2>Test</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem expedita dolorem molestias, adipisci itaque ratione repellat! Placeat laboriosam blanditiis beatae officiis dolores? Voluptates tempore deserunt animi debitis ipsum. Maxime, repellendus?</p>
+                    <h2>Shop</h2>
+                    <p>Place items in cart</p>
                 </figure>
             </section>
             <section class="block2">
-                <img src="img/test.jpg" alt="">
+                <img src="img/cash-svgrepo-com.svg" alt="">
                 <figure>
-                    <h2>Test</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem expedita dolorem molestias, adipisci itaque ratione repellat! Placeat laboriosam blanditiis beatae officiis dolores? Voluptates tempore deserunt animi debitis ipsum. Maxime, repellendus?.</p>
+                    <h2>Pay</h2>
+                    <p>Enter data and choose payment method</p>
                 </figure>
             </section>
             <section class="block3">
-                <img src="img/test.jpg" alt="">
+                <img src="img/order-1-svgrepo-com.svg" alt="">
                 <figure>
-                    <h2>Test</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem expedita dolorem molestias, adipisci itaque ratione repellat! Placeat laboriosam blanditiis beatae officiis dolores? Voluptates tempore deserunt animi debitis ipsum. Maxime, repellendus?</p>
+                    <h2>Order</h2>
+                    <p>Complete your order</p>
                 </figure>
             </section>
             <section class="block4">
-                <img src="img/test.jpg" alt="">
+                <img src="img/truck-round-653-svgrepo-com.svg" alt="">
                 <figure>
-                    <h2>Test</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem expedita dolorem molestias, adipisci itaque ratione repellat! Placeat laboriosam blanditiis beatae officiis dolores? Voluptates tempore deserunt animi debitis ipsum. Maxime, repellendus?</p>
+                    <h2>Wait</h2>
+                    <p>Your Order will be packed and shipped</p>
                 </figure>
             </section>
         </section>
 
         <section class="sections section4">
             <figure>
-                <h2>Test</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, ad consequuntur. Tempora itaque doloribus at excepturi maxime iusto corporis consequuntur alias nam harum, dignissimos hic perspiciatis magnam deleniti ipsum dolorem.</p>
+                <h2>Check This Out!</h2>
+                <p>
+                    The story of Cal Kestis continues in Star Wars Jedi: Survivor, a third-person, galaxy-spanning, action-adventure game from Respawn Entertainment, developed in collaboration with Lucasfilm Games. 
+                    This narratively driven, single-player title picks up 5 years after the events of Star Wars Jedi: Fallen Order and follows Cal's fight as the galaxy descends further into darkness. 
+                    Pushed to the edges of the galaxy by the Empire, Cal will find himself surrounded by threats new and familiar. 
+                    As one of the last surviving Jedi Knights, Cal is driven to make a stand during the galaxy's darkest times.
+                </p>
             </figure>
-            <img src="img/test.jpg" alt="">
+            <img src="img/Games/starwars.jpg" alt="">
         </section>
 
         <section class="sections section5">
@@ -89,7 +100,7 @@
             <ul class="reviews">
                 <li class="review">
                     <figure class="quote">
-                        &#10077;
+                        <img src="img/damian.png" alt="">
                     </figure>
                     <section class="stars">
                         &#9733;
@@ -100,7 +111,7 @@
                 </li>
                 <li class="review">
                     <figure class="quote">
-                        &#10077;
+                        <img src="img/jay2.png" alt="">
                     </figure>
                     <section class="stars">
                         &#9733;
@@ -112,7 +123,7 @@
                 </li>
                 <li class="review">
                     <figure class="quote">
-                        &#10077;
+                        <img src="img/jay.png" alt="">
                     </figure>
                     <section class="stars">
                         &#9733;
@@ -123,7 +134,7 @@
                 </li>
                 <li class="review">
                     <figure class="quote">
-                        &#10077;
+                        <img src="img/jay2.png" alt="">
                     </figure>
                     <section class="stars">
                         &#9733;
@@ -136,7 +147,7 @@
                 </li>
                 <li class="review">
                     <figure class="quote">
-                        &#10077;
+                        <img src="img/jay.png" alt="">
                     </figure>
                     <section class="stars">
                         &#9733;
@@ -147,7 +158,7 @@
                 </li>
                 <li class="review">
                     <figure class="quote">
-                        &#10077;
+                        <img src="img/damian.png" alt="">
                     </figure>
                     <section class="stars">
                         &#9733;
@@ -162,7 +173,16 @@
     </main>
     <footer>
         <nav>
-
+            <div>
+                <p>hello</p>
+            </div>
+            <ul class="links">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+            </ul>
         </nav>
     </footer>
 </body>
