--- a/Producten Overzicht.html
+++ b/Producten Overzicht.html
@@ -41,20 +41,20 @@
                 <div class="dropdown">
                     <button class="dropbtn">Dropdown</button>
                     <div class="dropdown-content">
-                        <input id="checkbox-soulslike" type="checkbox" class="filter" checked>
-                        <label for="checkbox-soulslike" class="label">Soulslike</label>
+                        <input id="checkbox-price-15" type="checkbox" class="filter" checked>
+                        <label for="checkbox-price-15" class="label">€0 - €15</label>
                         
-                        <input id="checkbox-rpg" type="checkbox" class="filter" checked>
-                        <label for="checkbox-rpg" class="label">RPG</label>
+                        <input id="checkbox-price-30" type="checkbox" class="filter" checked>
+                        <label for="checkbox-price-30" class="label">€16 - €30</label>
 
-                        <input id="checkbox-action" type="checkbox" class="filter" checked>
-                        <label for="checkbox-action" class="label">Action</label>
+                        <input id="checkbox-price-60" type="checkbox" class="filter" checked>
+                        <label for="checkbox-price-60" class="label">€31 - €60</label>
                     </div>
                 </div>
             </section>
         </section>
         <ul class="games">
-            <li class="game" data-category="soulslike">
+            <li class="game" data-category="soulslike" data-pricerange="price-15">
                 <img src="/img/Games/DarkSouls.jpg" alt="Dark Souls remaster cover art - PS4">
                 <div>
                     <p>
@@ -64,7 +64,7 @@
                     <h3 class="price">€ 12,00</h3>
                 </div>
             </li>
-            <li class="game" data-category="rpg">
+            <li class="game" data-category="rpg" data-pricerange="price-30">
                 <img src="/img/Games/Skyrim.jpg" alt="Skyrim rerelease number 54 cover art - PS4">
                 <div>
                     <p>
@@ -74,7 +74,7 @@
                     <h3 class="price">€ 16,20</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-15">
                 <img src="/img/Games/R6S.jpg" alt="Rainbow 6 siege cover art - PS4">
                 <div>
                     <p>
@@ -84,7 +84,7 @@
                     <h3 class="price">€ 7,56</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-60">
                 <img src="/img/Games/AcMirage.jpg" alt="Assassin's Creed mirage cover art - PS5">
                 <div>
                     <p>
@@ -94,7 +94,7 @@
                     <h3 class="price">€ 59,99</h3>
                 </div>
             </li>
-            <li class="game" data-category="soulslike">
+            <li class="game" data-category="soulslike" data-pricerange="price-30">
                 <img src="/img/Games/sekiro.jpg" alt="sekiro cover art - PS4">
                 <div>
                     <p>
@@ -104,7 +104,7 @@
                     <h3 class="price">€ 24,99</h3>
                 </div>
             </li>
-            <li class="game" data-category="rpg">
+            <li class="game" data-category="rpg" data-pricerange="price-15">
                 <img src="/img/Games/thewitcher3.jpg" alt="the witcher 3 cover art - PS4">
                 <div>
                     <p>
@@ -115,7 +115,7 @@
                     <h3 class="price">€ 12,99</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-15">
                 <img src="/img/Games/gta5.jpg" alt="gta5 cover art - PS4">
                 <div>
                     <p>
@@ -125,7 +125,7 @@
                     <h3 class="price">€ 14,99</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-60">
                 <img src="/img/Games/spiderman.jpg" alt="spiderman miles morales cover art - PS5">
                 <div>
                     <p>
@@ -135,7 +135,7 @@
                     <h3 class="price">€ 33,20</h3>
                 </div>
             </li>
-            <li class="game" data-category="soulslike">
+            <li class="game" data-category="soulslike" data-pricerange="price-30">
                 <img src="/img/Games/demonsouls.jpg" alt="demonsouls cover art - PS4">
                 <div>
                     <p>
@@ -146,7 +146,7 @@
                     <h3 class="price">€ 29,54</h3>
                 </div>
             </li>
-            <li class="game" data-category="rpg">
+            <li class="game" data-category="rpg" data-pricerange="price-30">
                 <img src="/img/Games/valhalla.jpg" alt="ac valhalla cover art - PS4">
                 <div>
                     <p>
@@ -156,17 +156,17 @@
                     <h3 class="price">€ 27,68</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-60">
                 <img src="/img/Games/starwars.jpg" alt="starwars fallen order cover art - PS4">
                 <div>
                     <p>
                         Star Wars Jedi: Survivor is an action-adventure game developed by Respawn Entertainment and published by Electronic Arts. 
                         A sequel to Star Wars Jedi: Fallen Order (2019)
                     </p>
-                    <h3 class="price">€ 69,99</h3>
+                    <h3 class="price">€ 59,99</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-15">
                 <img src="/img/Games/doom.jpg" alt="doom eternal cover art - PS5">
                 <div>
                     <p>
@@ -176,7 +176,7 @@
                     <h3 class="price">€ 11,12</h3>
                 </div>
             </li>
-            <li class="game" data-category="soulslike">
+            <li class="game" data-category="soulslike" data-pricerange="price-15">
                 <img src="/img/Games/nier.jpg" alt="nier automata cover art - PS4">
                 <div>
                     <p>
@@ -186,7 +186,7 @@
                     <h3 class="price">€ 6,76</h3>
                 </div>
             </li>
-            <li class="game" data-category="rpg">
+            <li class="game" data-category="rpg" data-pricerange="price-15">
                 <img src="/img/Games/origins.jpg" alt="ac origins release cover art - PS4">
                 <div>
                     <p>
@@ -196,17 +196,17 @@
                     <h3 class="price">€ 12,50</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-30">
                 <img src="/img/Games/fallenorder.jpg" alt="jedi fallen order cover art - PS4">
                 <div>
                     <p>
                         Star Wars Jedi: Fallen Order is a 2019 action-adventure game developed by Respawn Entertainment and published by Electronic Arts. 
                         The story is set in the Star Wars universe, five years after Star Wars: Episode III - Revenge of the Sith.
                     </p>
-                    <h3 class="price">€ 15,00</h3>
+                    <h3 class="price">€ 16,00</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-30">
                 <img src="/img/Games/sifu.jpg" alt="sifu cover art - PS5">
                 <div>
                     <p>
@@ -216,7 +216,7 @@
                     <h3 class="price">€ 19,99</h3>
                 </div>
             </li>
-            <li class="game" data-category="soulslike">
+            <li class="game" data-category="soulslike" data-pricerange="price-15">
                 <img src="/img/Games/bloodborne.jpg" alt="bloodborne cover art - PS4">
                 <div>
                     <p>
@@ -226,7 +226,7 @@
                     <h3 class="price">€ 6,00</h3>
                 </div>
             </li>
-            <li class="game" data-category="rpg">
+            <li class="game" data-category="rpg" data-pricerange="price-30">
                 <img src="/img/Games/eldenring.jpg" alt="eldenring cover art - PS4">
                 <div>
                     <p>
@@ -237,7 +237,7 @@
                     <h3 class="price">€ 25,90</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-60">
                 <img src="/img/Games/rdr2.jpg" alt="rdr2 cover art - PS4">
                 <div>
                     <p>
@@ -248,7 +248,7 @@
                     <h3 class="price">€ 50,00</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-60">
                 <img src="/img/Games/re4.jpg" alt="Assassin's Creed cover art - PS5">
                 <div>
                     <p>
@@ -259,7 +259,7 @@
                     <h3 class="price">€ 59,00</h3>
                 </div>
             </li>
-            <li class="game" data-category="soulslike">
+            <li class="game" data-category="soulslike" data-pricerange="price-15">
                 <img src="/img/Games/greedfall.jpg" alt="Dark Souls remaster cover art - PS4">
                 <div>
                     <p>
@@ -270,7 +270,7 @@
                     <h3 class="price">€ 6,99</h3>
                 </div>
             </li>
-            <li class="game" data-category="rpg">
+            <li class="game" data-category="rpg" data-pricerange="price-15">
                 <img src="/img/Games/cyberpunk.jpg" alt="Skyrim rerelease number 54 cover art - PS4">
                 <div>
                     <p>
@@ -280,7 +280,7 @@
                     <h3 class="price">€ 11,20</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-15">
                 <img src="/img/Games/dyinglight.jpg" alt="Rainbow 6 siege cover art - PS4">
                 <div>
                     <p>
@@ -290,7 +290,7 @@
                     <h3 class="price">€ 6,90</h3>
                 </div>
             </li>
-            <li class="game" data-category="action">
+            <li class="game" data-category="action" data-pricerange="price-60">
                 <img src="/img/Games/lastofus.jpg" alt="Assassin's Creed cover art - PS5">
                 <div>
                     <p>
