--- a/Producten Overzicht.html
+++ b/Producten Overzicht.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filter</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <li><img class="logo" src="img/logo2.png" alt=""></li>
                 <div>
                     <li><a href="index.html">Home Page</a></li>
-                    <li><a href="">Producten Overzicht 2</a></li>
+                    <li><a href="">Cart</a></li>
                 </div>
             </ul>
         </nav>
@@ -55,6 +55,7 @@
         </section>
         <ul class="games">
             <li class="game" data-category="soulslike" data-pricerange="price-15">
+                <a class="game-info1" href="Product Pagina 1.html">
                 <img src="/img/Games/DarkSouls.jpg" alt="Dark Souls remaster cover art - PS4">
                 <div>
                     <p>
@@ -63,8 +64,10 @@
                     </p>
                     <h3 class="price">€ 12,00</h3>
                 </div>
+                </a>
             </li>
             <li class="game" data-category="rpg" data-pricerange="price-30">
+                <a class="game-info2" href="Product Pagina 2.html">
                 <img src="/img/Games/Skyrim.jpg" alt="Skyrim rerelease number 54 cover art - PS4">
                 <div>
                     <p>
@@ -73,8 +76,10 @@
                     </p>
                     <h3 class="price">€ 16,20</h3>
                 </div>
+                </a>
             </li>
             <li class="game" data-category="action" data-pricerange="price-15">
+                <a class="game-info3" href="Product Pagina 3.html">
                 <img src="/img/Games/R6S.jpg" alt="Rainbow 6 siege cover art - PS4">
                 <div>
                     <p>
@@ -83,8 +88,10 @@
                     </p>
                     <h3 class="price">€ 7,56</h3>
                 </div>
+                </a>
             </li>
             <li class="game" data-category="action" data-pricerange="price-60">
+                <a class="game-info4" href="Product Pagina 4.html">
                 <img src="/img/Games/AcMirage.jpg" alt="Assassin's Creed mirage cover art - PS5">
                 <div>
                     <p>
@@ -93,16 +100,19 @@
                     </p>
                     <h3 class="price">€ 59,99</h3>
                 </div>
+                </a>
             </li>
             <li class="game" data-category="soulslike" data-pricerange="price-30">
+                <a class="game-info5" href="Product Pagina 5.html">
                 <img src="/img/Games/sekiro.jpg" alt="sekiro cover art - PS4">
                 <div>
                     <p>
-                        Sekiro: Shadows Die Twice[a] is a 2019 action-adventure game developed by FromSoftware. It was released for PlayStation 4, 
+                        Sekiro: Shadows Die Twice is a 2019 action-adventure game developed by FromSoftware. It was released for PlayStation 4, 
                         Windows, and Xbox One in March 2019 and for Stadia in October 2020 by FromSoftware in Japan and Activision internationally.
                     </p>
                     <h3 class="price">€ 24,99</h3>
                 </div>
+                </a>
             </li>
             <li class="game" data-category="rpg" data-pricerange="price-15">
                 <img src="/img/Games/thewitcher3.jpg" alt="the witcher 3 cover art - PS4">
