--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <ul class="navigation">
                 <li><img class="logo" src="img/logo2.png" alt=""></li>
                 <div>
-                    <li><a href="Producten Overzicht.html">Producten Overzicht 1</a></li>
-                    <li><a href="">Producten Overzicht 2</a></li>
+                    <li><a href="Producten Overzicht.html">Product Overzicht</a></li>
+                    <li><a href="">Cart</a></li>
                 </div>
             </ul>
         </nav>
@@ -26,7 +26,7 @@
         <section class="sections section1">
             <figure class="slogan">
                 <h2>We Sell Games</h2>
-                <a class="button1" href="">click</a>
+                <a class="button1" href="Producten Overzicht.html">Order</a>
             </figure>
         </section>
 
@@ -40,7 +40,7 @@
                         who searches for answers and justice in the bustling streets of ninth-century Baghdad. Through a mysterious, 
                         ancient organization called the Hidden Ones, he becomes a deadly Master Assassin and changes his destiny in a way he never imagined
                     </p>
-                    <a class="button2" href="">click</a>
+                    <a class="button2" href="Product Pagina 4.html">Check out</a>
                 </figure>
             </div>
             <div class="bottom">
