--- a/Cart.html
+++ b/Cart.html
@@ -16,26 +16,25 @@
                 <li><img class="logo" src="img/logo2.png" alt=""></li>
                 <div>
                     <li><a href="index.html">Home Page</a></li>
-                    <li><a href="Cart.html">Cart</a></li>
+                    <li><a href="Producten Overzicht.html">Product Overzicht</a></li>
                 </div>
             </ul>
         </nav>
     </header>
-    <main class="productenoverzicht2">
-
-        <section class="productinzicht">
-            <img class="topImage" src="img/Games/Skyrim.jpg" alt="">
-            <figure>
-                <h2>Skyrim</h2>
-                <p>
-                    The Elder Scrolls V: Skyrim is an action role-playing video game developed by Bethesda Game Studios and published by Bethesda Softworks. 
-                    It is the fifth main installment in The Elder Scrolls series, following The Elder Scrolls IV: Oblivion (2006)
-                </p>
-                <h3 class="price">€ 16,20</h3>
-                <a class="button3" href="">Order</a>
-            </figure>
-        </section>
-        
+    <main>
+        <ul class="slots">
+            <div>
+                <h2>Product</h2>
+                <h2>Price</h2>
+            </div>
+            <li class="slot"></li>
+            <li class="slot"></li>
+            <li class="slot"></li>
+            <div>
+                <a class="button4" href="">Purchase</a>
+                <h2 class="purchase-price">Total :</h2>
+            </div>
+        </ul>
     </main>
     <footer>
         <nav>
