--- a/Product Pagina 3.html
+++ b/Product Pagina 3.html
@@ -16,7 +16,7 @@
                 <li><img class="logo" src="img/logo2.png" alt=""></li>
                 <div>
                     <li><a href="index.html">Home Page</a></li>
-                    <li><a href="">Cart</a></li>
+                    <li><a href="Cart.html">Cart</a></li>
                 </div>
             </ul>
         </nav>
